# brightscript

./: Cargo.toml  LICENSE-MIT  README.md  build.sh  size.sh
examples/testing/: main.rs
src/: lib.rs  parser.rs
src/commands/: mod.rs  shell.rs
src/osutils/: linux.rs  mac.rs  mod.rs  windows.rs
